fixed footer alignment and address

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,7 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  font-family: $light-font, "Helvetica Neue", Arial, sans-serif;
+  font-family: $light-font, "Helvetica Neue", Arial, sans-serif !important;
 }
 .footer-links {
   display: flex;
